trying to fix shifting

--- a/themes/hugo-coder-portfolio/static/css/custom.css
+++ b/themes/hugo-coder-portfolio/static/css/custom.css
@@ -21,3 +21,6 @@ navigation-title::before,
   display: none !important;
 }
 
+html {
+  overflow-y: scroll;
+}
